wrote a bash script and made and made adjustments to the project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,25 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_DB: 'postgres'
-      POSTGRES_USER: 'postgres'
-      POSTGRES_PASSWORD: 'postgres'
+      POSTGRES_DB: '${DB_NAME}'
+      POSTGRES_USER: '${DB_USER}'
+      POSTGRES_PASSWORD: '${DB_PASSWORD}'
     ports:
-      - '5432:5432'
+      - '${DB_PORT}:${DB_PORT}'
+    hostname: '${DB_HOST}'
+
+  web:
+    build:
+      dockerfile: _docker/Dockerfile
+    restart: always
+    command: bash -c "python main.py"
+    volumes:
+      - ./src:/app
+    depends_on:
+      - db
+    env_file:
+      - .env
 
 
 volumes:
   db_value:
-  redis_value:
-  celery_value:
