--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ faker = "^19.1.0"
 loguru = "^0.7.0"
 pydantic = "1.10.5"
 psycopg2-binary = "^2.9.6"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
